--- a/front/src/component/Board.css
+++ b/front/src/component/Board.css
@@ -8,42 +8,6 @@
   width: 65%;
 }
 
-.playerBoard {
+.dataBoard {
   width: 35%;
-}
-
-.button {
-  margin: auto;
-  padding: 10px 25px;
-  margin-bottom: 20px;
-  text-align: center;
-  text-transform: uppercase;
-  transition: 0.5s;
-  background-size: 200% auto;
-  color: white;
-  border-radius: 10px;
-  display: block;
-  border: 0px;
-  font-weight: 700;
-  box-shadow: 0px 0px 14px -7px #f09819;
-  background-image: linear-gradient(45deg, #FF512F 0%, #F09819  51%, #FF512F  100%);
-  cursor: pointer;
-  user-select: none;
-  -webkit-user-select: none;
-}
-
-.button:hover {
-  background-position: right center; /* the direction of the change here */
-  text-decoration: none;
-}
-
-.button:active {
-  transform: scale(0.95);
-}
-
-button:disabled,
-button[disabled]{
-  border: 1px solid #999999;
-  background-color: #cccccc;
-  color: #666666;
 }
